--- a/contact.html
+++ b/contact.html
@@ -25,22 +25,43 @@
 		</div>
 	</div>
 
-	<div class="middle-section">
+<div class="container">
+
+	<div class="middle-section-2">
 		<!--About Me Body Paragraph-->
 		<div class="about-me">
 			<h2>Contact</h2>
+			
+			<br>
 
-			<p>------------------------------------------------------------------------------------------------------------</p>
-
-			<p>Under Construction!</p>
+			<form>
+				<ul>
+					<li>
+						<label for="name">Name</label>
+						<br>
+						<input type="text" name="name" placeholder="John Smith">				
+					</li>
+					<br>
+					<li>
+						<label for="email">Email</label>
+						<br>
+						<input type="email" name="email" placeholder="example@gmail.com">
+					</li>
+					<br>
+					<li>
+						<label for="message">Message</label>
+						<br>
+						<textarea name="message"></textarea>
+					</li>
+				</ul>
+				<input type="submit">
+			</form>
 
 		</div>
 
 		<!--Connect With Me Image Links-->
 		<div class="connect-3">
 			<h3>Connect with Me</h3>
-
-			<p>-------------------------------------------</p>
 			
 			<a href="https://github.com/azianpinoy" target="_blank">
 				<img class="Pic Pic-1" src="Assets/images/Github.png">
@@ -59,6 +80,8 @@
 		<div class="CR">
 			© Copyright 2017 James DeChavez
 		</div>
+
+</div>
 
 </body>
 
