--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
 	<div class="top-section">
 		<!--Header Title of the Website-->
 		<div class="web-title">
@@ -25,12 +26,14 @@
 		</div>
 	</div>
 
+<div class="container">
+
 	<div class="middle-section">
 		<!--About Me Body Paragraph-->
 		<div class="about-me">
 			<h2>About Me</h2>
 
-			<p>------------------------------------------------------------------------------------------------------------</p>
+			<img id="profile-pic" src="Assets/images/james.jpg">
 
 			<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 
@@ -43,8 +46,6 @@
 		<!--Connect With Me Image Links-->
 		<div class="connect-1">
 			<h3>Connect with Me</h3>
-
-			<p>-------------------------------------------</p>
 			
 			<a href="https://github.com/azianpinoy" target="_blank">
 				<img class="Pic Pic-1" src="Assets/images/Github.png">
@@ -63,6 +64,7 @@
 		<div class="CR">
 			© Copyright 2017 James DeChavez
 		</div>
+</div>
 
 </body>
 
