--- a/portfolio.html
+++ b/portfolio.html
@@ -25,22 +25,45 @@
 		</div>
 	</div>
 
+<div class="container">
+
 	<div class="middle-section">
 		<!--About Me Body Paragraph-->
-		<div class="about-me">
+		<div class="about-me2">
 			<h2>Portfolio</h2>
 
-			<p>------------------------------------------------------------------------------------------------------------</p>
+			<br>
 
-			<p>Coming Soon!</p>
+			<div class="pic-container">
+				<img class="portfolio-pic" src="Assets/images/port-pic-1.jpg">
+				<div class="pic-text">Portfolio Item 1</div>
+			</div>
+
+			<div class="pic-container">
+				<img class="portfolio-pic" src="Assets/images/port-pic-2.jpg">
+				<div class="pic-text">Portfolio Item 2</div>
+			</div>
+
+			<div class="pic-container">
+				<img class="portfolio-pic" src="Assets/images/port-pic-3.jpg">
+				<div class="pic-text">Portfolio Item 3</div>
+			</div>
+
+			<div class="pic-container">
+				<img class="portfolio-pic" src="Assets/images/port-pic-4.jpg">
+				<div class="pic-text">Portfolio Item 4</div>
+			</div>
+
+			<div class="pic-container">
+				<img class="portfolio-pic" src="Assets/images/port-pic-5.jpg">
+				<div class="pic-text">Portfolio Item 5</div>
+			</div>
 
 		</div>
 
 		<!--Connect With Me Image Links-->
 		<div class="connect-2">
 			<h3>Connect with Me</h3>
-
-			<p>-------------------------------------------</p>
 			
 			<a href="https://github.com/azianpinoy" target="_blank">
 				<img class="Pic Pic-1" src="Assets/images/Github.png">
@@ -59,6 +82,8 @@
 		<div class="CR">
 			© Copyright 2017 James DeChavez
 		</div>
+
+</div>
 
 </body>
 
